force-app/main/default/objects/SPEN_DesignChange__c/SPEN_DesignChange__c.object-meta.xml
<CustomObject>
    <label>Design Change</label>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Design Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>