force-app/main/default/objects/SPEN_DesignChange__c/fields/SPEN_DesignEndDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DesignEndDate__c</fullName>
    <label>Design End Date</label>
    <type>Date</type>
</CustomField>