force-app/main/default/objects/SPEN_DesignChange__c/fields/SPEN_DesignStartDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DesignStartDate__c</fullName>
    <label>Design Start Date</label>
    <type>Date</type>
</CustomField>