force-app/main/default/objects/SPEN_DesignChange__c/fields/SPEN_LandInterest__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandInterest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Right</label>
    <referenceTo>SPEN_Land_Interest__c</referenceTo>
    <relationshipLabel>Design Changes</relationshipLabel>
    <relationshipName>Design_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>