force-app/main/default/objects/SPEN_DesignChange__c/fields/SPEN_LeadTimeDelay__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LeadTimeDelay__c</fullName>
    <label>Lead Time Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>