force-app/main/default/objects/SPEN_DesignChange__c/fields/SPEN_RedesignOrigin__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RedesignOrigin__c</fullName>
    <label>Redesign Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>Land Interest</fullName>
                <label>Land Right</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>