force-app/main/default/objects/SPEN_DesignChange__c/fields/SPEN_RedesignReason__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RedesignReason__c</fullName>
    <label>Redesign Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landowner Refusal</fullName>
            </value>
            <value>
                <fullName>Customer Issue</fullName>
            </value>
            <value>
                <fullName>Undeliverable Design</fullName>
            </value>
            <value>
                <fullName>Planning/Environmental</fullName>
            </value>
            <value>
                <fullName>ECU Issue</fullName>
            </value>
            <value>
                <fullName>Other External Stakeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>